--- a/package.json
+++ b/package.json
@@ -25,10 +25,16 @@
     "@expo/vector-icons": "^6.2.0",
     "color": "^3.0.0",
     "expo": "^31.0.4",
+    "hoist-non-react-statics": "3.0.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
-    "react-native-extended-stylesheet": "^0.8.0"
+    "react-native-dropdownalert": "3.1.2",
+    "react-native-extended-stylesheet": "^0.8.0",
+    "react-navigation": "2.5.5",
+    "react-redux": "5.0.4",
+    "redux": "4.0.0",
+    "redux-logger": "3.0.1"
   }
 }
