--- a/app.json
+++ b/app.json
@@ -1,5 +1,12 @@
 {
   "expo": {
-    "sdkVersion": "31.0.0"
+    "sdkVersion": "35.0.0",
+    "name": "CurrencyConverter-Starter",
+    "slug": "currencyconverter-starter",
+    "version": "0.1.0",
+    "platforms": [
+      "ios",
+      "android"
+    ]
   }
 }
