--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
-    "eslint": "^5.0.1",
+    "babel-eslint": "^10.0.3",
+    "electron-rebuild": "^1.8.5",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
@@ -18,18 +19,19 @@
     "eject": "expo eject",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint app/",
+    "lint:fix": "eslint app/ --fix"
   },
   "dependencies": {
-    "@expo/vector-icons": "^6.2.0",
+    "@expo/vector-icons": "^10.0.0",
+    "bcrypt": "^3.0.6",
     "color": "^3.0.0",
-    "expo": "^31.0.4",
+    "expo": "^35.0.0",
     "hoist-non-react-statics": "3.0.1",
     "moment": "^2.18.1",
     "prop-types": "^15.5.10",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.1.tar.gz",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dropdownalert": "3.1.2",
     "react-native-extended-stylesheet": "^0.8.0",
     "react-navigation": "2.5.5",
@@ -37,4 +39,5 @@
     "redux": "4.0.0",
     "redux-logger": "3.0.1"
   }
+
 }
